--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "libphonenumber-js": "^1.9.16",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "vue-phone-number-input": "^1.1.10",
-    "vue-tel-input": "^5.2.0"
+    "vue-tel-input": "^5.3.0"
   }
 }
