--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-route-validator": "^0.2.5",
     "express-validator": "^6.11.1",
     "libphonenumber-js": "^1.9.16",
     "moment": "^2.29.1",
